// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend should fetch a BIG query 1`] = `
Object {
  "specialties": Array [
    Object {
      "id": "1",
      "matches": Array [
        Object {
          "date": "2020-03-12T18:00:00.000Z",
          "id": "1",
          "partecipants": Array [
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
              "id": "1",
              "name": "Niccolò",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "2",
              "name": "Mario",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "4",
              "name": "Mattia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "6",
              "name": "Filippo",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
              ],
            },
          ],
          "site": Object {
            "id": "1",
            "name": "The Beach",
          },
          "specialty": Object {
            "id": "1",
            "name": "2x2 Male",
          },
        },
        Object {
          "date": "2020-03-15T18:00:00.000Z",
          "id": "3",
          "partecipants": Array [
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
              "id": "1",
              "name": "Niccolò",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "2",
              "name": "Mario",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "3",
              "name": "Luigi",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "4",
              "name": "Mattia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
          ],
          "site": Object {
            "id": "1",
            "name": "The Beach",
          },
          "specialty": Object {
            "id": "1",
            "name": "2x2 Male",
          },
        },
      ],
      "name": "2x2 Male",
      "sport": Object {
        "id": "1",
        "name": "Beach Volley",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "1",
            "name": "2x2 Male",
          },
          Object {
            "id": "2",
            "name": "2x2 Female",
          },
          Object {
            "id": "3",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "4",
      "matches": Array [],
      "name": "1x1 Male",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "4",
            "name": "1x1 Male",
          },
          Object {
            "id": "5",
            "name": "1x1 Female",
          },
          Object {
            "id": "6",
            "name": "2x2 Male",
          },
          Object {
            "id": "7",
            "name": "2x2 Female",
          },
          Object {
            "id": "8",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "5",
      "matches": Array [],
      "name": "1x1 Female",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "4",
            "name": "1x1 Male",
          },
          Object {
            "id": "5",
            "name": "1x1 Female",
          },
          Object {
            "id": "6",
            "name": "2x2 Male",
          },
          Object {
            "id": "7",
            "name": "2x2 Female",
          },
          Object {
            "id": "8",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "6",
      "matches": Array [],
      "name": "2x2 Male",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "4",
            "name": "1x1 Male",
          },
          Object {
            "id": "5",
            "name": "1x1 Female",
          },
          Object {
            "id": "6",
            "name": "2x2 Male",
          },
          Object {
            "id": "7",
            "name": "2x2 Female",
          },
          Object {
            "id": "8",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "7",
      "matches": Array [],
      "name": "2x2 Female",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "4",
            "name": "1x1 Male",
          },
          Object {
            "id": "5",
            "name": "1x1 Female",
          },
          Object {
            "id": "6",
            "name": "2x2 Male",
          },
          Object {
            "id": "7",
            "name": "2x2 Female",
          },
          Object {
            "id": "8",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "8",
      "matches": Array [],
      "name": "2x2 Mixed",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "4",
            "name": "1x1 Male",
          },
          Object {
            "id": "5",
            "name": "1x1 Female",
          },
          Object {
            "id": "6",
            "name": "2x2 Male",
          },
          Object {
            "id": "7",
            "name": "2x2 Female",
          },
          Object {
            "id": "8",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "2",
      "matches": Array [
        Object {
          "date": "2020-03-15T18:00:00.000Z",
          "id": "5",
          "partecipants": Array [
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
              "id": "7",
              "name": "Sara",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "8",
              "name": "Lucia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "9",
              "name": "Giorgia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
              ],
              "id": "10",
              "name": "Claudia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
          ],
          "site": Object {
            "id": "1",
            "name": "The Beach",
          },
          "specialty": Object {
            "id": "2",
            "name": "2x2 Female",
          },
        },
      ],
      "name": "2x2 Female",
      "sport": Object {
        "id": "1",
        "name": "Beach Volley",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "1",
            "name": "2x2 Male",
          },
          Object {
            "id": "2",
            "name": "2x2 Female",
          },
          Object {
            "id": "3",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
    Object {
      "id": "3",
      "matches": Array [
        Object {
          "date": "2020-05-20T16:30:00.000Z",
          "id": "2",
          "partecipants": Array [
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
              "id": "1",
              "name": "Niccolò",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "4",
              "name": "Mattia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
              "id": "7",
              "name": "Sara",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "9",
              "name": "Giorgia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
          ],
          "site": Object {
            "id": "1",
            "name": "The Beach",
          },
          "specialty": Object {
            "id": "3",
            "name": "2x2 Mixed",
          },
        },
        Object {
          "date": "2020-05-19T14:00:00.000Z",
          "id": "4",
          "partecipants": Array [
            Object {
              "createdMatches": Array [],
              "id": "4",
              "name": "Mattia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "3",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "6",
              "name": "Filippo",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-03-12T18:00:00.000Z",
                  "id": "1",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
              ],
            },
            Object {
              "createdMatches": Array [],
              "id": "9",
              "name": "Giorgia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-20T16:30:00.000Z",
                  "id": "2",
                },
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
            Object {
              "createdMatches": Array [
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
              ],
              "id": "10",
              "name": "Claudia",
              "partecipatedMatches": Array [
                Object {
                  "date": "2020-05-19T14:00:00.000Z",
                  "id": "4",
                },
                Object {
                  "date": "2020-03-15T18:00:00.000Z",
                  "id": "5",
                },
              ],
            },
          ],
          "site": Object {
            "id": "2",
            "name": "Palabeach",
          },
          "specialty": Object {
            "id": "3",
            "name": "2x2 Mixed",
          },
        },
      ],
      "name": "2x2 Mixed",
      "sport": Object {
        "id": "1",
        "name": "Beach Volley",
        "sites": Array [
          Object {
            "id": "1",
            "matches": Array [
              Object {
                "date": "2020-03-12T18:00:00.000Z",
                "id": "1",
              },
              Object {
                "date": "2020-05-20T16:30:00.000Z",
                "id": "2",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "3",
              },
              Object {
                "date": "2020-03-15T18:00:00.000Z",
                "id": "5",
              },
            ],
            "name": "The Beach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
          Object {
            "id": "2",
            "matches": Array [
              Object {
                "date": "2020-05-19T14:00:00.000Z",
                "id": "4",
              },
            ],
            "name": "Palabeach",
            "sports": Array [
              Object {
                "id": "1",
                "name": "Beach Volley",
              },
              Object {
                "id": "2",
                "name": "Beach Tennis",
              },
            ],
          },
        ],
        "specialties": Array [
          Object {
            "id": "1",
            "name": "2x2 Male",
          },
          Object {
            "id": "2",
            "name": "2x2 Female",
          },
          Object {
            "id": "3",
            "name": "2x2 Mixed",
          },
        ],
      },
    },
  ],
}
`;

exports[`Backend should fetch a query with find() and findOne() in the resolvers 1`] = `
Object {
  "matches": Array [
    Object {
      "averageLevel": 4.75,
      "id": "1",
      "partecipants": Array [
        Object {
          "id": "1",
          "level": 5,
          "name": "Niccolò",
        },
        Object {
          "id": "2",
          "level": 3,
          "name": "Mario",
        },
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
        Object {
          "id": "6",
          "level": 4,
          "name": "Filippo",
        },
      ],
    },
    Object {
      "averageLevel": 5.25,
      "id": "2",
      "partecipants": Array [
        Object {
          "id": "1",
          "level": 5,
          "name": "Niccolò",
        },
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
        Object {
          "id": "7",
          "level": 1,
          "name": "Sara",
        },
        Object {
          "id": "9",
          "level": 8,
          "name": "Giorgia",
        },
      ],
    },
    Object {
      "averageLevel": 4.75,
      "id": "4",
      "partecipants": Array [
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
        Object {
          "id": "6",
          "level": 4,
          "name": "Filippo",
        },
        Object {
          "id": "9",
          "level": 8,
          "name": "Giorgia",
        },
        Object {
          "id": "10",
          "level": 0,
          "name": "Claudia",
        },
      ],
    },
    Object {
      "averageLevel": 2.5,
      "id": "5",
      "partecipants": Array [
        Object {
          "id": "7",
          "level": 1,
          "name": "Sara",
        },
        Object {
          "id": "8",
          "level": 1,
          "name": "Lucia",
        },
        Object {
          "id": "9",
          "level": 8,
          "name": "Giorgia",
        },
        Object {
          "id": "10",
          "level": 0,
          "name": "Claudia",
        },
      ],
    },
    Object {
      "averageLevel": 5,
      "id": "3",
      "partecipants": Array [
        Object {
          "id": "1",
          "level": 5,
          "name": "Niccolò",
        },
        Object {
          "id": "2",
          "level": 3,
          "name": "Mario",
        },
        Object {
          "id": "3",
          "level": 0,
          "name": "Luigi",
        },
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
      ],
    },
  ],
}
`;

exports[`Backend should fetch a query with find() in the resolvers 1`] = `
Object {
  "matches": Array [
    Object {
      "averageLevel": 4.75,
      "id": "1",
    },
    Object {
      "averageLevel": 5.25,
      "id": "2",
    },
    Object {
      "averageLevel": 4.75,
      "id": "4",
    },
    Object {
      "averageLevel": 2.5,
      "id": "5",
    },
    Object {
      "averageLevel": 5,
      "id": "3",
    },
  ],
}
`;

exports[`Backend should fetch a query with findOne() in the resolvers 1`] = `
Object {
  "matches": Array [
    Object {
      "id": "1",
      "partecipants": Array [
        Object {
          "id": "1",
          "level": 5,
          "name": "Niccolò",
        },
        Object {
          "id": "2",
          "level": 3,
          "name": "Mario",
        },
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
        Object {
          "id": "6",
          "level": 4,
          "name": "Filippo",
        },
      ],
    },
    Object {
      "id": "2",
      "partecipants": Array [
        Object {
          "id": "1",
          "level": 5,
          "name": "Niccolò",
        },
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
        Object {
          "id": "7",
          "level": 1,
          "name": "Sara",
        },
        Object {
          "id": "9",
          "level": 8,
          "name": "Giorgia",
        },
      ],
    },
    Object {
      "id": "4",
      "partecipants": Array [
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
        Object {
          "id": "6",
          "level": 4,
          "name": "Filippo",
        },
        Object {
          "id": "9",
          "level": 8,
          "name": "Giorgia",
        },
        Object {
          "id": "10",
          "level": 0,
          "name": "Claudia",
        },
      ],
    },
    Object {
      "id": "5",
      "partecipants": Array [
        Object {
          "id": "7",
          "level": 1,
          "name": "Sara",
        },
        Object {
          "id": "8",
          "level": 1,
          "name": "Lucia",
        },
        Object {
          "id": "9",
          "level": 8,
          "name": "Giorgia",
        },
        Object {
          "id": "10",
          "level": 0,
          "name": "Claudia",
        },
      ],
    },
    Object {
      "id": "3",
      "partecipants": Array [
        Object {
          "id": "1",
          "level": 5,
          "name": "Niccolò",
        },
        Object {
          "id": "2",
          "level": 3,
          "name": "Mario",
        },
        Object {
          "id": "3",
          "level": 0,
          "name": "Luigi",
        },
        Object {
          "id": "4",
          "level": 7,
          "name": "Mattia",
        },
      ],
    },
  ],
}
`;

exports[`Backend should fetch all specialties and their sport (Many To One) 1`] = `
Object {
  "specialties": Array [
    Object {
      "id": "1",
      "name": "2x2 Male",
      "sport": Object {
        "id": "1",
        "name": "Beach Volley",
      },
    },
    Object {
      "id": "4",
      "name": "1x1 Male",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
      },
    },
    Object {
      "id": "5",
      "name": "1x1 Female",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
      },
    },
    Object {
      "id": "6",
      "name": "2x2 Male",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
      },
    },
    Object {
      "id": "7",
      "name": "2x2 Female",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
      },
    },
    Object {
      "id": "8",
      "name": "2x2 Mixed",
      "sport": Object {
        "id": "2",
        "name": "Beach Tennis",
      },
    },
    Object {
      "id": "2",
      "name": "2x2 Female",
      "sport": Object {
        "id": "1",
        "name": "Beach Volley",
      },
    },
    Object {
      "id": "3",
      "name": "2x2 Mixed",
      "sport": Object {
        "id": "1",
        "name": "Beach Volley",
      },
    },
  ],
}
`;

exports[`Backend should fetch all sports and their specialties (One To Many) 1`] = `
Object {
  "sports": Array [
    Object {
      "id": "1",
      "name": "Beach Volley",
      "specialties": Array [
        Object {
          "id": "1",
          "name": "2x2 Male",
        },
        Object {
          "id": "2",
          "name": "2x2 Female",
        },
        Object {
          "id": "3",
          "name": "2x2 Mixed",
        },
      ],
    },
    Object {
      "id": "2",
      "name": "Beach Tennis",
      "specialties": Array [
        Object {
          "id": "4",
          "name": "1x1 Male",
        },
        Object {
          "id": "5",
          "name": "1x1 Female",
        },
        Object {
          "id": "6",
          "name": "2x2 Male",
        },
        Object {
          "id": "7",
          "name": "2x2 Female",
        },
        Object {
          "id": "8",
          "name": "2x2 Mixed",
        },
      ],
    },
  ],
}
`;

exports[`Backend should fetch all users 1`] = `
Object {
  "users": Array [
    Object {
      "id": "1",
      "name": "Niccolò",
    },
    Object {
      "id": "2",
      "name": "Mario",
    },
    Object {
      "id": "3",
      "name": "Luigi",
    },
    Object {
      "id": "4",
      "name": "Mattia",
    },
    Object {
      "id": "5",
      "name": "Riccardo",
    },
    Object {
      "id": "6",
      "name": "Filippo",
    },
    Object {
      "id": "7",
      "name": "Sara",
    },
    Object {
      "id": "8",
      "name": "Lucia",
    },
    Object {
      "id": "9",
      "name": "Giorgia",
    },
    Object {
      "id": "10",
      "name": "Claudia",
    },
  ],
}
`;
